fixed invisible anchor tags in modal

--- a/css/projectModals.css
+++ b/css/projectModals.css
@@ -146,3 +146,7 @@
     font-family: 'Times New Roman', Times, serif;
     padding: 10px 0px;
 }
+
+.modalGitHubRepoAddress a {
+    color: black;
+}
